The header items align was fixed

--- a/src/scss/rwd/_rwd.scss
+++ b/src/scss/rwd/_rwd.scss
@@ -142,6 +142,18 @@
 
 @media screen and (min-width: 768px) {
     body {
+        .nav__ul {
+            align-items: center;
+            .li-items {
+                padding-top: 0px;
+             
+
+                a {
+                    padding-top: 0px;
+                    font-size: 17px;
+                }
+            }
+        }
         width: 100%;
         margin: auto;
         main {
